--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.18.0",
+    "firebase-tools": "^11.25.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
